Mon May 18 04:18:37 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Arrange to pass command line option so that xlC
	  actually fails to compile the test code for typeid() when RTTI isn't
	  enabled.

Sat May 16 12:08:17 GMT 2015  Olly Betts <olly@survex.com>

	* common/socket_utils.cc: Fix casts on the 4th argument of
	  setsockopt() so they compile on platforms which expect
	  char * or const char * there.

Sat May 16 11:02:13 GMT 2015  Olly Betts <olly@survex.com>

	* common/socket_utils.cc: Don't include <sys/socket.h> under
	  __WIN32__.

Fri May 15 13:32:05 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Enhance the probe for whether the test harness can use
	  RTTI so that it works for xlC (which defaults to not generating
	  RTTI).

Fri May 15 11:16:18 GMT 2015  Olly Betts <olly@survex.com>

	* common/io_utils.cc: Replace the code used on platforms without
	  F_DUPFD with simpler code which actually compiles.

Fri May 15 05:30:33 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Another update for 1.2.21.

Fri May 15 05:19:27 GMT 2015  Olly Betts <olly@survex.com>

	* pkgconfig/xapian-core.pc.in: Include @ldflags@ in pkg-config .pc
	  file.

Fri May 15 05:18:51 GMT 2015  Olly Betts <olly@survex.com>

	* pkgconfig/xapian-core.pc.in: Fix include directory reported by
	  pkg-config.

Fri May 15 05:18:03 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,pkgconfig/xapian-core.pc.in,xapian-config.in: When
	  compiling with xlC on AIX, _LARGE_FILES gets defined by
	  AC_SYS_LARGEFILE to enable large file support, and defining this
	  changes the ABI of std::string, so include it in xapian-config
	  --cxxflags and the pkg-config equivalent.

Fri May 15 05:13:30 GMT 2015  Olly Betts <olly@survex.com>

	* tests/Makefile.am,tests/perftest/Makefile.mk: Use $(NO_INSTALL)
	  rather than @NO_INSTALL@ to allow make-time overriding.

Fri May 15 05:11:42 GMT 2015  Olly Betts <olly@survex.com>
