@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2014 Olly Betts
  * Copyright 2006,2009 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or
@@ -27,6 +27,7 @@
 #include "leafpostlist.h"
 #include "termlist.h"
 #include "database.h"
+#include "valuestats.h"
 #include <map>
 #include <vector>
 #include <algorithm>
@@ -37,8 +38,6 @@
 #include "noreturn.h"
 
 using namespace std;
-
-struct ValueStats;
 
 // Class representing a posting (a term/doc pair, and
 // all the relevant positional information, is a single posting)
